# halo3

./: .gitignore  .halo_intent_cache.json  Makefile  pyproject.toml
src/halo/: __init__.py  chat.py
src/halo/api/: models.py  server.py
src/halo/api/routes/: command_routes.py  custom_routes.py  home_routes.py  openai_routes.py
src/halo/backend/: __init__.py  base.py  provider.py
src/halo/backend/qwen/: __init__.py  backend.py
src/halo/cli/: __init__.py
src/halo/context/: __init__.py  manager.py
src/halo/intent/: __init__.py  base.py  cache.py  chain.py  embeddings.py  factory.py
src/halo/intent/classifiers/: __init__.py  embedding.py  exact_match.py  keyword.py  llm.py
src/halo/mqtt/: __init__.py  client.py  correlation.py  topics.py
src/halo/tools/: __init__.py  dispatcher.py  executor.py  pipeline.py  registry.py
src/halo/tools/filters/: __init__.py  base.py
src/halo/tools/filters/post_execution/: __init__.py  context_updater.py  nlg_formatter.py  result_validator.py
src/halo/tools/filters/pre_execution/: __init__.py  context_enricher.py  parameter_normalizer.py  schema_validator.py
src/halo/tools/handlers/: __init__.py  blinds.py  climate.py  lights.py  status.py
